# duc

./: Makefile.am  README.md  configure.ac
src/duc/: cmd-ls.c
src/libduc/: dir.c  duc.c
tests/: Makefile.am  check_duc_ls_api.c
